--- a/Conclusions/0x20.md
+++ b/Conclusions/0x20.md
@@ -1,1 +1,54 @@
+🏢 **Эксперт №20 — Архитектор ERP-систем (совместимость СУБД с ERP-нагрузкой, бизнес-процессы, OLTP/OLAP)**
 
+---
+
+### 🎯 Зона ответственности:
+
+* Адаптация СУБД под высоконагруженные ERP-сценарии (SAP, Oracle EBS, Odoo, 1C)
+* Поддержка сложных транзакций, ACID, referential integrity
+* Real-time аналитика, HTAP-архитектура
+* Расширяемость, UDF, скрипты, транзакционные DSL
+* Миграции, версионирование данных, BPMN-интеграция
+
+---
+
+### ✅ Найдено в `sap_hana_architecture_19.puml`:
+
+| Компонент                      | Комментарий                                                            |
+| ------------------------------ | ---------------------------------------------------------------------- |
+| `htap_engine`                  | Наличие — ключевой для ERP-систем с OLTP/OLAP нагрузкой                |
+| `transaction_engine`           | Обработка сложных ACID-транзакций — есть                               |
+| `mvcc_engine`                  | Поддержка snapshot isolation — отлично                                 |
+| `json_store`, `dsl_engine`     | Гибкость для ERP-метаданных и бизнес-логики                            |
+| `udf_engine`                   | Встроенные расширения — плюсы для ERP и кастомизации                   |
+| `cdc_streamer`, `bpmn_adapter` | Явное указание на event-driven сценарии, совместимость с workflow/BPMN |
+
+---
+
+### ⚠️ Недостатки:
+
+| Проблема                          | Обоснование                                                    |
+| --------------------------------- | -------------------------------------------------------------- |
+| ❌ Нет `temporal_version_manager`  | Для ERP нужны SYSTEM VERSIONED таблицы, `AS OF` аналитика      |
+| ❌ Нет `reference_integrity_guard` | Не отражены механизмы FK/PK контроля при массовых обновлениях  |
+| ❌ Нет `erp_migration_toolkit`     | Нет явного инструмента миграции схем и данных ERP-платформ     |
+| ❌ Нет `business_rule_executor`    | Для сложных бизнес-правил и условий нужен изолированный модуль |
+| ❌ Нет `multi-tenant_segmenter`    | ERP предполагает поддержку сегментов (организаций/филиалов)    |
+
+---
+
+### 💯 Оценка: **79 / 100**
+
+---
+
+### 🔧 Рекомендации:
+
+1. **Добавить `temporal_version_manager`** — поддержка истории, `VALID FROM / TO`, аналитика по времени
+2. **Ввести `reference_integrity_guard`** — контроль ссылочной целостности при batch/merge
+3. **Добавить `erp_migration_toolkit`** — миграция Oracle, HANA, 1C → новая схема
+4. **Добавить `business_rule_executor`** — DSL для условий типа "если A и (B или C)"
+5. **Добавить `multi-tenant_segmenter`** — логическая изоляция филиалов/организаций (multi-org)
+
+---
+
+🏢 **Вывод:** Архитектура адаптирована под ERP-нагрузки, особенно в части транзакционности и HTAP, но нуждается в глубокой поддержке темпоральных данных, миграции и кастомных правил.
