--- a/Conclusions/0x21.md
+++ b/Conclusions/0x21.md
@@ -1,1 +1,54 @@
+🔌 **Эксперт №21 — Инженер по интеграции (ETL, CDC, BI, Kafka, ERP-адаптеры)**
 
+---
+
+### 🎯 Область анализа:
+
+* ETL / ELT: загрузка данных из внешних источников (CSV, Parquet, JSON, S3)
+* Потоковая интеграция: Kafka, Debezium, Pulsar
+* CDC (Change Data Capture): для ERP и аналитики
+* BI-сценарии: views, materialized views, cubes
+* Адаптеры: внешние процедуры, Webhooks, GraphQL, REST, gRPC, CLI
+
+---
+
+### ✅ Найдено в `sap_hana_architecture_19.puml`:
+
+| Компонент              | Комментарий                                                         |
+| ---------------------- | ------------------------------------------------------------------- |
+| `etl_engine`           | Центральный модуль — отвечает за массовую загрузку и преобразования |
+| `cdc_streamer`         | Отражает поддержку Kafka / Debezium / log-based streaming           |
+| `rest_api`, `grpc_api` | Внешние интерфейсы взаимодействия                                   |
+| `graphql_api`          | Современный подход к интеграции с UI и BI                           |
+| `webhook_adapter`      | Поддержка событийной интеграции с внешними системами                |
+| `external_proc_runner` | Поддержка вызова внешнего кода — критично для ERP / ETL сценариев   |
+
+---
+
+### ⚠️ Недостатки и пробелы:
+
+| Проблема                         | Обоснование                                                   |
+| -------------------------------- | ------------------------------------------------------------- |
+| ❌ Нет `bi_cube_engine`           | Нет модуля для обработки OLAP-кубов и ROLLUP / CUBE агрегатов |
+| ❌ Нет `parquet_loader`           | Загрузка из форматов вроде Parquet/S3 не представлена явно    |
+| ❌ Нет `etl_scheduler`            | Планировщик ETL-задач и cron-like исполнение не отображены    |
+| ❌ Нет `cdc_consistency_checker`  | Не видно проверки целостности при Change Data Capture         |
+| ❌ Нет `etl_monitoring_dashboard` | Отсутствует компонент для отслеживания статуса и ошибок в ETL |
+
+---
+
+### 💯 Оценка: **81 / 100**
+
+---
+
+### 🔧 Рекомендации:
+
+1. **Добавить `bi_cube_engine`** — агрегаты, CUBE, ROLLUP, materialized views
+2. **Ввести `parquet_loader`** — поддержка S3/Parquet/ORC ingestion
+3. **Добавить `etl_scheduler`** — граф заданий, cron-расписания
+4. **Добавить `cdc_consistency_checker`** — сверка логов/снимков для согласованности
+5. **Добавить `etl_monitoring_dashboard`** — контроль прогресса/ошибок загрузки
+
+---
+
+🔌 **Вывод:** Архитектура охватывает ключевые аспекты потоковой и API-интеграции, но требует расширения BI/OLAP-сценариев и планирования задач — критично для производственного масштаба.
