--- a/Conclusions/0x25.md
+++ b/Conclusions/0x25.md
@@ -1,1 +1,53 @@
+🔭 **Эксперт №25 — Инженер по наблюдаемости (Observability: Метрики, Трейсинг, Логи, Профилировка)**
 
+---
+
+### 🎯 Зона ответственности:
+
+* Инструменты наблюдаемости: метрики (Prometheus), трейсы (OpenTelemetry), логи (structured), профилировка (flamegraph)
+* Поддержка Alerting/Tracing/Metrics Exporter
+* Диагностика: Query Timeline, Perf Events, Resource Usage
+* Интеграция с Grafana, Jaeger, Zipkin, Loki
+
+---
+
+### ✅ Найдено в `sap_hana_architecture_19.puml`:
+
+| Компонент                | Комментарий                                                                  |
+| ------------------------ | ---------------------------------------------------------------------------- |
+| `metrics_engine`         | Ядро сбора и агрегации метрик                                                |
+| `opentelemetry_exporter` | Поддержка OpenTelemetry трассировки                                          |
+| `log_engine`             | Явное логирование событий                                                    |
+| `flamegraph_profiler`    | Инструмент глубокого анализа CPU-path / execution path                       |
+| `query_tracer`           | Поддержка детализации исполнения запросов                                    |
+| `alert_manager_adapter`  | Подключение к внешним алертовым системам (например, Prometheus Alertmanager) |
+
+---
+
+### ⚠️ Недостатки и зоны роста:
+
+| Проблема                        | Обоснование                                                         |
+| ------------------------------- | ------------------------------------------------------------------- |
+| ❌ Нет `structured_log_exporter` | Не видно поддержки экспорта логов в syslog / JSON / binary форматах |
+| ❌ Нет `loki_adapter`            | Нет интеграции логов с Loki / ELK / EFK стеком                      |
+| ❌ Нет `resource_monitor`        | Не отражено отслеживание CPU, memory, IOPS по сессиям               |
+| ❌ Нет `observability_dashboard` | Не отображён Web UI / REST для мониторинга состояния                |
+| ❌ Нет `query_latency_histogram` | Гистограмма latency / percentiles на уровне запросов                |
+
+---
+
+### 💯 Оценка: **85 / 100**
+
+---
+
+### 🔧 Рекомендации:
+
+1. **Добавить `structured_log_exporter`** — JSON/syslog/Binary лог-экспортер
+2. **Ввести `loki_adapter`** — для полнотекстового поиска логов в Grafana
+3. **Добавить `resource_monitor`** — лимиты и usage трекинг по пользователям/сессиям
+4. **Ввести `observability_dashboard`** — REST/UI отображение всех метрик
+5. **Добавить `query_latency_histogram`** — Percentile breakdown для response time
+
+---
+
+🔭 **Вывод:** Архитектура заложила мощную observability-базу: OpenTelemetry, профилировку, логирование и query trace. Однако отсутствуют визуализация, адаптеры для ELK/Loki, и метрики ресурсных ограничений — это критично для production-ready уровня.
