--- a/Connections/Incoming/0x01.md
+++ b/Connections/Incoming/0x01.md
@@ -1,1 +1,38 @@
+🔗 **Связи для блока `0.1 Точка входа` (`main`)**
+📦 Пакет: `0. Инициализация и системный старт`
+🏷️ Метка: `<<entrypoint>>`
 
+---
+
+### 🔻 Исходящие связи (`main --> X`)
+
+| Направление                     | Целевой блок                            | Назначение |
+| ------------------------------- | --------------------------------------- | ---------- |
+| `main --> config_loader`        | Загрузка конфигурации                   |            |
+| `main --> logger`               | Инициализация логгера                   |            |
+| `main --> platform_init`        | Инициализация низкоуровневой платформы  |            |
+| `main --> bootstrap_controller` | Управление запуском подсистем           |            |
+| `main --> memory_allocator`     | Выделение NUMA-aware памяти             |            |
+| `main --> wal_manager`          | Инициализация WAL-журнала               |            |
+| `main --> snapshot_manager`     | Загрузка snapshot при старте            |            |
+| `main --> sql_parser`           | Активация SQL-парсера                   |            |
+| `main --> sql_executor`         | Запуск SQL-движка                       |            |
+| `main --> raft_engine`          | Инициализация consensus                 |            |
+| `main --> replication`          | Инициализация репликации                |            |
+| `main --> prometheus_exporter`  | Старт сбора метрик                      |            |
+| `main --> ci_cd_runner`         | Инициализация CI/CD (если в Dev-режиме) |            |
+
+---
+
+### 🔺 Входящие связи (`X --> main`)
+
+| Источник | Назначение                                     |
+| -------- | ---------------------------------------------- |
+| нет      | `main` — точка входа, не имеет внешних вызовов |
+
+---
+
+### 🧩 Всего связей: **13**
+
+* Исходящие: **13**
+* Входящие: **0**
