--- a/Connections/Incoming/0x02.md
+++ b/Connections/Incoming/0x02.md
@@ -1,1 +1,36 @@
+🔗 **Связи для блока `0.2 Загрузчик конфигурации` (`config_loader`)**
+📦 Пакет: `0. Инициализация и системный старт`
 
+---
+
+### 🔻 Исходящие связи (`config_loader --> X`)
+
+| Направление                              | Целевой блок                                        | Назначение |
+| ---------------------------------------- | --------------------------------------------------- | ---------- |
+| `config_loader --> logger`               | Настройка режима логирования (stderr/syslog/binary) |            |
+| `config_loader --> memory_allocator`     | Загрузка настроек NUMA, лимитов                     |            |
+| `config_loader --> wal_manager`          | Параметры WAL: путь, размер, флаги                  |            |
+| `config_loader --> snapshot_manager`     | Настройки snapshot и recovery-режима                |            |
+| `config_loader --> sql_executor`         | Флаги выполнения, debug-режим                       |            |
+| `config_loader --> replication`          | Конфигурация реплики, роли (active/standby)         |            |
+| `config_loader --> grpc_interface`       | Порты, лимиты соединений                            |            |
+| `config_loader --> rest_api`             | HTTP-параметры                                      |            |
+| `config_loader --> multi_tenant_limiter` | Лимиты на tenant (CPU, память, IOPS)                |            |
+| `config_loader --> quota_manager`        | Квоты на storage и query                            |            |
+| `config_loader --> ci_cd_runner`         | Флаги Dev-режима                                    |            |
+| `config_loader --> structured_logger`    | JSON-logging и формат логов                         |            |
+
+---
+
+### 🔺 Входящие связи (`X --> config_loader`)
+
+| Источник                 | Назначение                   |
+| ------------------------ | ---------------------------- |
+| `main --> config_loader` | Запуск загрузки конфигурации |
+
+---
+
+### 🧩 Всего связей: **13**
+
+* Исходящие: **12**
+* Входящие: **1**
