--- a/Connections/Incoming/0x03.md
+++ b/Connections/Incoming/0x03.md
@@ -1,1 +1,31 @@
+🔗 **Связи для блока `0.3 Логгер (stderr/syslog/binary)` (`logger`)**
+📦 Пакет: `0. Инициализация и системный старт`
 
+---
+
+### 🔻 Исходящие связи (`logger --> X`)
+
+| Направление                      | Целевой блок                                            | Назначение |
+| -------------------------------- | ------------------------------------------------------- | ---------- |
+| `logger --> structured_logger`   | Передача логов в систему структурированного логирования |            |
+| `logger --> audit_logger`        | Логирование аудита (DDL/DML, доступ)                    |            |
+| `logger --> ci_cd_runner`        | Логирование событий в pipeline                          |            |
+| `logger --> tracing_agent`       | Интеграция логов с трассировкой                         |            |
+| `logger --> flamegraph_profiler` | Маркеры событий для профилировки                        |            |
+| `logger --> fuzzer_engine`       | Логирование исключений во время fuzz-тестов             |            |
+
+---
+
+### 🔺 Входящие связи (`X --> logger`)
+
+| Источник                   | Назначение                                          |
+| -------------------------- | --------------------------------------------------- |
+| `main --> logger`          | Инициализация логгера при старте                    |
+| `config_loader --> logger` | Установка режима логирования (stderr/syslog/binary) |
+
+---
+
+### 🧩 Всего связей: **8**
+
+* Исходящие: **6**
+* Входящие: **2**
