--- a/Connections/Incoming/0x04.md
+++ b/Connections/Incoming/0x04.md
@@ -1,1 +1,40 @@
+🔗 **Связи для блока `0.4 Инициализация платформы` (`platform_init`)**
+📦 Пакет: `0. Инициализация и системный старт`
+
+---
+
+### 🔻 Исходящие связи (`platform_init --> X`)
+
+| Направление                           | Целевой блок                                                      | Назначение |
+| ------------------------------------- | ----------------------------------------------------------------- | ---------- |
+| `platform_init --> memory_allocator`  | Инициализация NUMA, prefetch, cache coloring                      |            |
+| `platform_init --> buffer_pool`       | Выделение физической памяти под буферы                            |            |
+| `platform_init --> page_cache`        | Структуры для LRU/ARC                                             |            |
+| `platform_init --> structured_logger` | Системный лог и статус инициализации                              |            |
+| `platform_init --> tracing_agent`     | Старт низкоуровневой трассировки                                  |            |
+| `platform_init --> platform_deps`     | Подключение системных зависимостей (опциональный блок — см. ниже) |            |
+
+> **Примечание:** `platform_deps` — это потенциально недостающий блок, который управляет init libc, POSIX, clock, сигналы, CPU topology. Можем обсудить, нужен ли он как явный.
+
+---
+
+### 🔺 Входящие связи (`X --> platform_init`)
+
+| Источник                 | Назначение                         |
+| ------------------------ | ---------------------------------- |
+| `main --> platform_init` | Запуск платформенной инициализации |
+
+---
+
+### 🧩 Всего связей: **6**
+
+* Исходящие: **5**
+* Входящие: **1**
+
+---
+
+✅ Блок `0.4 Инициализация платформы` корректно интегрирован с основами памяти и трассировки.
+⚠️ **Рекомендация:** рассмотреть добавление вспомогательного блока `platform_deps` или `syslib_wrapper`, чтобы явно отделить POSIX/init зависимости.
+
+Жду `да` — и выдам связи следующего блока: `0.5 Контроллер запуска`.
 
