--- a/Connections/Incoming/0x02.md
+++ b/Connections/Incoming/0x02.md
@@ -34,3 +34,7 @@
 
 * Исходящие: **12**
 * Входящие: **1**
+
+---
+
+✅ Блок `0.2 Загрузчик конфигурации` покрывает все ключевые подсистемы, конфигурируемые при старте.
