--- a/Connections/Incoming/0x05.md
+++ b/Connections/Incoming/0x05.md
@@ -1,1 +1,39 @@
+🔗 **Связи для блока `0.5 Контроллер запуска` (`bootstrap_controller`)**
+📦 Пакет: `0. Инициализация и системный старт`
 
+---
+
+### 🔻 Исходящие связи (`bootstrap_controller --> X`)
+
+| Направление                                 | Целевой блок                           | Назначение |
+| ------------------------------------------- | -------------------------------------- | ---------- |
+| `bootstrap_controller --> memory_allocator` | Проверка статуса аллокатора            |            |
+| `bootstrap_controller --> page_cache`       | Инициализация и preheat страниц        |            |
+| `bootstrap_controller --> buffer_pool`      | Старт preload буферов                  |            |
+| `bootstrap_controller --> wal_manager`      | Проверка состояния WAL и Recovery Mode |            |
+| `bootstrap_controller --> snapshot_manager` | Старт загрузки snapshot                |            |
+| `bootstrap_controller --> replication`      | Активация ролей (active/passive)       |            |
+| `bootstrap_controller --> failover_engine`  | Инициализация Watchdog и Failover FSM  |            |
+| `bootstrap_controller --> sql_executor`     | Запуск планировщика команд post-start  |            |
+| `bootstrap_controller --> ci_cd_runner`     | Dev-режим / тестирование и автозапуск  |            |
+| `bootstrap_controller --> raft_engine`      | Проверка лидерства (если consensus)    |            |
+
+---
+
+### 🔺 Входящие связи (`X --> bootstrap_controller`)
+
+| Источник                        | Назначение                          |
+| ------------------------------- | ----------------------------------- |
+| `main --> bootstrap_controller` | Запуск основного контроллера старта |
+
+---
+
+### 🧩 Всего связей: **11**
+
+* Исходящие: **10**
+* Входящие: **1**
+
+---
+
+✅ Блок `0.5 Контроллер запуска` — ключевой диспетчер старта всех критически важных компонентов.
+📌 Он охватывает: хранилище, отказоустойчивость, recovery, буферы, consensus.
