--- a/Connections/Incoming/1x01.md
+++ b/Connections/Incoming/1x01.md
@@ -1,1 +1,45 @@
+🔗 **Связи для блока `1.1 Распределение памяти` (`memory_allocator`)**
+📦 Пакет: `1. Архитектура и Хранилище`
+🏷️ Тег: `<<NUMA-aware>>`
 
+---
+
+### 🔻 Исходящие связи (`memory_allocator --> X`)
+
+| Направление                                | Целевой блок                                                | Назначение |
+| ------------------------------------------ | ----------------------------------------------------------- | ---------- |
+| `memory_allocator --> buffer_pool`         | Выделение и управление физической памятью                   |            |
+| `memory_allocator --> page_cache`          | NUMA-aware аллокация страниц                                |            |
+| `memory_allocator --> column_store`        | NUMA-aware выделение блоков колонок                         |            |
+| `memory_allocator --> row_store`           | Структуры строковых страниц                                 |            |
+| `memory_allocator --> json_store`          | Хранилище бинарных JSON-структур                            |            |
+| `memory_allocator --> wal_manager`         | Страницы для WAL-блоков и лог-буферов                       |            |
+| `memory_allocator --> snapshot_manager`    | Буферы и временные образы                                   |            |
+| `memory_allocator --> arrow_layout`        | Векторное представление в памяти                            |            |
+| `memory_allocator --> for_encoding`        | Сжатие frame-of-reference требует выделения aligned-страниц |            |
+| `memory_allocator --> versioned_tables`    | Поддержка версионированной аллокации                        |            |
+| `memory_allocator --> ml_runtime`          | ONNX/Tensor tensors — выделение больших массивов            |            |
+| `memory_allocator --> vectorized_executor` | Аллокаторы под SIMD-блоки                                   |            |
+| `memory_allocator --> instant_snapshot`    | Аллокация copy-on-write snapshot блоков                     |            |
+
+---
+
+### 🔺 Входящие связи (`X --> memory_allocator`)
+
+| Источник                                    | Назначение                               |
+| ------------------------------------------- | ---------------------------------------- |
+| `platform_init --> memory_allocator`        | Инициализация NUMA и low-level allocator |
+| `config_loader --> memory_allocator`        | Загрузка конфигурации лимитов            |
+| `bootstrap_controller --> memory_allocator` | Проверка статуса и pre-warm              |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **13**
+* Входящие: **3**
+
+---
+
+✅ Блок `1.1 Распределение памяти` — фундаментальный для всех хранилищ и выполнения.
+Обеспечивает NUMA-aware поведение, критичное для многосокетных систем.
