--- a/Connections/Incoming/1x02.md
+++ b/Connections/Incoming/1x02.md
@@ -1,1 +1,40 @@
+🔗 **Связи для блока `1.2 Кэш страниц` (`page_cache`)**
+📦 Пакет: `1. Архитектура и Хранилище`
+🏷️ Тег: `<<LRU/ARC>>`
 
+---
+
+### 🔻 Исходящие связи (`page_cache --> X`)
+
+| Направление                            | Целевой блок                            | Назначение |
+| -------------------------------------- | --------------------------------------- | ---------- |
+| `page_cache --> column_store`          | Постраничный доступ к колонкам и чтение |            |
+| `page_cache --> row_store`             | Страницы строковых таблиц               |            |
+| `page_cache --> cold_storage_fallback` | Тиринг: выгрузка холодных страниц       |            |
+| `page_cache --> ttl_eviction`          | Страницы, подлежащие вытеснению         |            |
+| `page_cache --> snapshot_manager`      | Кэш страниц снапшотов                   |            |
+| `page_cache --> index_manager`         | Доступ к страницам B-деревьев / bitmap  |            |
+| `page_cache --> arrow_layout`          | Подкачка arrow-блоков                   |            |
+| `page_cache --> for_encoding`          | Хранение сжатых страниц FOR-кодирования |            |
+
+---
+
+### 🔺 Входящие связи (`X --> page_cache`)
+
+| Источник                              | Назначение                            |
+| ------------------------------------- | ------------------------------------- |
+| `platform_init --> page_cache`        | Инициализация кэша                    |
+| `memory_allocator --> page_cache`     | Аллокация страниц в NUMA-aware режиме |
+| `bootstrap_controller --> page_cache` | Старт preheat механизма               |
+
+---
+
+### 🧩 Всего связей: **11**
+
+* Исходящие: **8**
+* Входящие: **3**
+
+---
+
+✅ Блок `1.2 Кэш страниц` интегрирован с большинством подкомпонентов хранения и снапшотов.
+Обеспечивает *настраиваемый алгоритм замещения* (LRU/ARC), preload и кешируемость FOR/Arrow/Column страниц.
