--- a/Connections/Incoming/1x03.md
+++ b/Connections/Incoming/1x03.md
@@ -1,1 +1,46 @@
+🔗 **Связи для блока `1.3 Колонковое хранилище` (`column_store`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`column_store --> X`)
+
+| Направление                             | Целевой блок                                  | Назначение |
+| --------------------------------------- | --------------------------------------------- | ---------- |
+| `column_store --> index_manager`        | Подключение инвертированных и bitmap-индексов |            |
+| `column_store --> compression_engine`   | Сжатие колонок (RLE, dictionary, FOR)         |            |
+| `column_store --> ttl_eviction`         | Маркировка колонок для вытеснения             |            |
+| `column_store --> buffer_pool`          | Чтение/запись сегментов                       |            |
+| `column_store --> arrow_layout`         | Хранение в Arrow-совместимом формате          |            |
+| `column_store --> for_encoding`         | Использование FOR-структур                    |            |
+| `column_store --> snapshot_manager`     | Поддержка версионных колонок                  |            |
+| `column_store --> versioned_tables`     | История изменений для AS OF / MVCC            |            |
+| `column_store --> vectorized_executor`  | Передача векторных блоков                     |            |
+| `column_store --> arrow_executor`       | Потоковая обработка колонок                   |            |
+| `column_store --> streaming_aggregator` | Агрегации по вектору                          |            |
+| `column_store --> ml_runtime`           | Колонки как фичи для ML-пайплайна             |            |
+
+---
+
+### 🔺 Входящие связи (`X --> column_store`)
+
+| Источник                            | Назначение                       |
+| ----------------------------------- | -------------------------------- |
+| `memory_allocator --> column_store` | Выделение памяти под колонки     |
+| `page_cache --> column_store`       | Кэширование страниц колонок      |
+| `etl_engine --> column_store`       | Загрузка в колонковый формат     |
+| `sql_executor --> column_store`     | Чтение/запись запросов           |
+| `dsl_engine --> column_store`       | Пользовательские сценарии        |
+| `cdc_streaming --> column_store`    | Изменения в режиме stream-insert |
+| `snapshot_manager --> column_store` | Загрузка версий                  |
+
+---
+
+### 🧩 Всего связей: **18**
+
+* Исходящие: **12**
+* Входящие: **6**
+
+---
+
+✅ `1.3 Колонковое хранилище` — один из самых "связанных" компонентов, интегрирован во все уровни: хранение, исполнение, аналитика, ML.
