--- a/Connections/Incoming/1x04.md
+++ b/Connections/Incoming/1x04.md
@@ -1,1 +1,43 @@
+🔗 **Связи для блока `1.4 Строковое хранилище` (`row_store`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`row_store --> X`)
+
+| Направление                         | Целевой блок                                      | Назначение |
+| ----------------------------------- | ------------------------------------------------- | ---------- |
+| `row_store --> buffer_pool`         | Чтение/запись строковых страниц                   |            |
+| `row_store --> index_manager`       | Подключение B+ деревьев и hash-индексов           |            |
+| `row_store --> ttl_eviction`        | Удаление строк по TTL                             |            |
+| `row_store --> compression_engine`  | Сжатие строк (dictionary, delta)                  |            |
+| `row_store --> snapshot_manager`    | Сохранение строковых версий                       |            |
+| `row_store --> versioned_tables`    | История строковых значений                        |            |
+| `row_store --> vectorized_executor` | Поддержка построчной обработки                    |            |
+| `row_store --> ml_runtime`          | Векторизация строк как фичей                      |            |
+| `row_store --> adaptive_joins`      | Источник данных для соединений                    |            |
+| `row_store --> for_encoding`        | (опционально) применяется к повторяющимся строкам |            |
+
+---
+
+### 🔺 Входящие связи (`X --> row_store`)
+
+| Источник                         | Назначение                  |
+| -------------------------------- | --------------------------- |
+| `memory_allocator --> row_store` | NUMA-aware выделение памяти |
+| `page_cache --> row_store`       | Кэш строковых страниц       |
+| `etl_engine --> row_store`       | Загрузка строковых таблиц   |
+| `sql_executor --> row_store`     | OLTP-запросы INSERT/UPDATE  |
+| `cdc_streaming --> row_store`    | Стриминговые вставки        |
+| `mvcc_engine --> row_store`      | Применение MVCC к строкам   |
+
+---
+
+### 🧩 Всего связей: **15**
+
+* Исходящие: **10**
+* Входящие: **5**
+
+---
+
+✅ `1.4 Строковое хранилище` — основа для OLTP-нагрузки, используется в insert/update, MVCC, адаптивных соединениях и транзакциях.
