--- a/Connections/Incoming/1x05.md
+++ b/Connections/Incoming/1x05.md
@@ -1,1 +1,46 @@
+🔗 **Связи для блока `1.5 Хранилище JSON` (`json_store`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`json_store --> X`)
+
+| Направление                           | Целевой блок                                 | Назначение |
+| ------------------------------------- | -------------------------------------------- | ---------- |
+| `json_store --> buffer_pool`          | Кэш JSON-страниц в буферном пуле             |            |
+| `json_store --> index_manager`        | Поддержка инвертированных/JSON-path индексов |            |
+| `json_store --> compression_engine`   | Сжатие JSON-объектов (dictionary/Δ)          |            |
+| `json_store --> snapshot_manager`     | Версионирование JSON-документов              |            |
+| `json_store --> ttl_eviction`         | TTL-вытеснение неактуальных JSON-объектов    |            |
+| `json_store --> versioned_tables`     | Хранение историй JSON для `SYSTEM VERSIONED` |            |
+| `json_store --> udf_engine`           | Вызов UDF над JSON-данными                   |            |
+| `json_store --> graphql_api`          | Источник для GraphQL-подзапросов             |            |
+| `json_store --> json_api`             | Взаимодействие с внешними JSON-интерфейсами  |            |
+| `json_store --> streaming_aggregator` | Потоковая агрегация по JSON-структурам       |            |
+| `json_store --> arrow_layout`         | Представление JSON-данных как Arrow-таблиц   |            |
+
+---
+
+### 🔺 Входящие связи (`X --> json_store`)
+
+| Источник                          | Назначение                                   |
+| --------------------------------- | -------------------------------------------- |
+| `memory_allocator --> json_store` | Аллокация памяти под дерево JSON             |
+| `page_cache --> json_store`       | Кэширование JSON-страниц                     |
+| `etl_engine --> json_store`       | Загрузка JSON-файлов / BSON / NDJSON         |
+| `rest_api --> json_store`         | Приём JSON-запросов/данных                   |
+| `cdc_streaming --> json_store`    | Приём JSON-стримов                           |
+| `sql_executor --> json_store`     | Доступ через `JSON_VALUE`, `JSON_TABLE`      |
+| `dsl_engine --> json_store`       | Встраивание в пользовательские DSL-пайплайны |
+
+---
+
+### 🧩 Всего связей: **18**
+
+* Исходящие: **11**
+* Входящие: **7**
+
+---
+
+✅ Блок `1.5 Хранилище JSON` — активно интегрирован с REST/GraphQL, UDF, JSON API, индексами, агрегаторами и snapshot-менеджером.
+Обеспечивает гибкость при работе с semi-structured данными и необходим для гибридной аналитики (HTAP).
