--- a/Connections/Incoming/1x06.md
+++ b/Connections/Incoming/1x06.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `1.6 Управление шардами` (`sharding_manager`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`sharding_manager --> X`)
+
+| Направление                                  | Целевой блок                                   | Назначение |
+| -------------------------------------------- | ---------------------------------------------- | ---------- |
+| `sharding_manager --> partition_manager`     | Делегирование партиционирования внутри шарда   |            |
+| `sharding_manager --> auto_rebalancer`       | Перераспределение шардов                       |            |
+| `sharding_manager --> cold_storage_fallback` | Выгрузка шарда на SSD при холодности           |            |
+| `sharding_manager --> replication`           | Синхронизация данных между шардовыми репликами |            |
+| `sharding_manager --> mvcc_engine`           | Управление видимостью в пределах шарда         |            |
+| `sharding_manager --> txn_manager`           | Прокси-передача транзакций на нужный шард      |            |
+| `sharding_manager --> raft_engine`           | Консенсус и лидерство для каждого шарда        |            |
+| `sharding_manager --> crash_recovery`        | Восстановление состояния конкретных шардов     |            |
+| `sharding_manager --> schema_evolver`        | Распределённая эволюция схем на шардах         |            |
+| `sharding_manager --> quota_manager`         | Контроль лимитов на уровне шарда               |            |
+
+---
+
+### 🔺 Входящие связи (`X --> sharding_manager`)
+
+| Источник                                    | Назначение                                      |
+| ------------------------------------------- | ----------------------------------------------- |
+| `sql_executor --> sharding_manager`         | Директивы доступа к конкретному шарду           |
+| `etl_engine --> sharding_manager`           | Массовая загрузка с шардированием               |
+| `dsl_engine --> sharding_manager`           | Запуск шардированных пользовательских сценариев |
+| `bootstrap_controller --> sharding_manager` | Инициализация конфигурации шардинга             |
+| `config_loader --> sharding_manager`        | Чтение топологии и стратегий распределения      |
+| `platform_init --> sharding_manager`        | Запуск узлов-менеджеров шардов                  |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **10**
+* Входящие: **6**
+
+---
+
+✅ Блок `1.6 Управление шардами` — ядро горизонтального масштабирования.
+Он тесно связан с транзакциями, MVCC, консенсусом, управлением схемой, восстановлением, и API уровнем (ETL, SQL, DSL).
