--- a/Connections/Incoming/1x07.md
+++ b/Connections/Incoming/1x07.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `1.7 Управление партициями` (`partition_manager`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`partition_manager --> X`)
+
+| Направление                                   | Целевой блок                                    | Назначение |
+| --------------------------------------------- | ----------------------------------------------- | ---------- |
+| `partition_manager --> column_store`          | Разделение колонок по партициям                 |            |
+| `partition_manager --> row_store`             | Постраничная сегментация строк                  |            |
+| `partition_manager --> ttl_eviction`          | Удаление устаревших партиций                    |            |
+| `partition_manager --> cold_storage_fallback` | Перенос старых партиций в SSD-хранилище         |            |
+| `partition_manager --> snapshot_manager`      | Ведение версий на уровне партиций               |            |
+| `partition_manager --> index_manager`         | Локальные индексы для партиций                  |            |
+| `partition_manager --> wal_manager`           | Логирование партиционных изменений              |            |
+| `partition_manager --> recovery_service`      | Восстановление на уровне партиций               |            |
+| `partition_manager --> quota_manager`         | Учет лимитов по партициям                       |            |
+| `partition_manager --> versioned_tables`      | Разделение версионированных таблиц по партициям |            |
+
+---
+
+### 🔺 Входящие связи (`X --> partition_manager`)
+
+| Источник                                     | Назначение                           |
+| -------------------------------------------- | ------------------------------------ |
+| `sharding_manager --> partition_manager`     | Партиционирование внутри шарда       |
+| `sql_executor --> partition_manager`         | Партиционные операции в запросах     |
+| `etl_engine --> partition_manager`           | Разделение при пакетной загрузке     |
+| `schema_evolver --> partition_manager`       | Изменения схем с учётом партиций     |
+| `bootstrap_controller --> partition_manager` | Инициализация партиционных таблиц    |
+| `config_loader --> partition_manager`        | Загрузка стратегии партиционирования |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **10**
+* Входящие: **6**
+
+---
+
+✅ `1.7 Управление партициями` обеспечивает масштабируемость, TTL, cold storage, snapshot и адаптацию схем на уровне подтаблиц.
+Полностью соответствует промышленной архитектуре с поддержкой партиций в OLTP/OLAP-нагрузке.
