--- a/Connections/Incoming/1x08.md
+++ b/Connections/Incoming/1x08.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `1.8 Авто-ребалансировка` (`auto_rebalancer`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`auto_rebalancer --> X`)
+
+| Направление                                 | Целевой блок                                      | Назначение |
+| ------------------------------------------- | ------------------------------------------------- | ---------- |
+| `auto_rebalancer --> sharding_manager`      | Запрос на перемещение шардов                      |            |
+| `auto_rebalancer --> partition_manager`     | Перераспределение партиций                        |            |
+| `auto_rebalancer --> quota_manager`         | Балансировка ресурсов между тенантами             |            |
+| `auto_rebalancer --> cold_storage_fallback` | Автоматическая выгрузка менее используемых данных |            |
+| `auto_rebalancer --> ttl_eviction`          | Принудительное вытеснение в рамках ребаланса      |            |
+| `auto_rebalancer --> replication`           | Учет реплик при балансировке                      |            |
+| `auto_rebalancer --> metrics_exporter`      | Публикация метрик о перегрузках                   |            |
+| `auto_rebalancer --> platform_init`         | Управление миграцией при старте/перезапуске узлов |            |
+| `auto_rebalancer --> buffer_pool`           | Балансировка горячих страниц между узлами         |            |
+| `auto_rebalancer --> raft_engine`           | Координация перемещений через консенсус           |            |
+
+---
+
+### 🔺 Входящие связи (`X --> auto_rebalancer`)
+
+| Источник                               | Назначение                               |
+| -------------------------------------- | ---------------------------------------- |
+| `sharding_manager --> auto_rebalancer` | Передача команд на перераспределение     |
+| `platform_init --> auto_rebalancer`    | Инициализация логики балансировки        |
+| `config_loader --> auto_rebalancer`    | Загрузка политик балансировки            |
+| `metrics_exporter --> auto_rebalancer` | Обнаружение перегруженных компонентов    |
+| `schema_evolver --> auto_rebalancer`   | Реакция на изменения структуры таблиц    |
+| `crash_recovery --> auto_rebalancer`   | Восстановление и выравнивание после сбоя |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **10**
+* Входящие: **6**
+
+---
+
+✅ Блок `1.8 Авто-ребалансировка` — критический для динамического масштабирования, обеспечения отказоустойчивости и равномерного распределения нагрузки.
+Обеспечивает самовосстановление после перегрузки или сбоя, участвует в балансировке ресурсов между компонентами in-memory СУБД.
