--- a/Connections/Incoming/1x09.md
+++ b/Connections/Incoming/1x09.md
@@ -1,35 +1,35 @@
-🔗 **Связи для блока `1.8 Авто-ребалансировка` (`auto_rebalancer`)**
+🔗 **Связи для блока `1.9 Компрессия данных` (`compression_engine`)**
 📦 Пакет: `1. Архитектура и Хранилище`
 
 ---
 
-### 🔻 Исходящие связи (`auto_rebalancer --> X`)
+### 🔻 Исходящие связи (`compression_engine --> X`)
 
-| Направление                                 | Целевой блок                                      | Назначение |
-| ------------------------------------------- | ------------------------------------------------- | ---------- |
-| `auto_rebalancer --> sharding_manager`      | Запрос на перемещение шардов                      |            |
-| `auto_rebalancer --> partition_manager`     | Перераспределение партиций                        |            |
-| `auto_rebalancer --> quota_manager`         | Балансировка ресурсов между тенантами             |            |
-| `auto_rebalancer --> cold_storage_fallback` | Автоматическая выгрузка менее используемых данных |            |
-| `auto_rebalancer --> ttl_eviction`          | Принудительное вытеснение в рамках ребаланса      |            |
-| `auto_rebalancer --> replication`           | Учет реплик при балансировке                      |            |
-| `auto_rebalancer --> metrics_exporter`      | Публикация метрик о перегрузках                   |            |
-| `auto_rebalancer --> platform_init`         | Управление миграцией при старте/перезапуске узлов |            |
-| `auto_rebalancer --> buffer_pool`           | Балансировка горячих страниц между узлами         |            |
-| `auto_rebalancer --> raft_engine`           | Координация перемещений через консенсус           |            |
+| Направление                                    | Целевой блок                                                  | Назначение |
+| ---------------------------------------------- | ------------------------------------------------------------- | ---------- |
+| `compression_engine --> column_store`          | Применение векторной компрессии и FOR-кодирования             |            |
+| `compression_engine --> row_store`             | RLE / dictionary compression при вставке                      |            |
+| `compression_engine --> arrow_layout`          | Поддержка векторного сжатия для Arrow                         |            |
+| `compression_engine --> for_encoding`          | Делегирование frame-of-reference                              |            |
+| `compression_engine --> buffer_pool`           | Сжатое хранение страниц в памяти                              |            |
+| `compression_engine --> cold_storage_fallback` | Уплотнение перед выгрузкой на SSD                             |            |
+| `compression_engine --> snapshot_manager`      | Хранение снимков в сжатом виде                                |            |
+| `compression_engine --> wal_manager`           | Оптимизация WAL-записей через delta-компрессию                |            |
+| `compression_engine --> mvcc_engine`           | Сжатие цепочек версий (compressed chains)                     |            |
+| `compression_engine --> adaptive_aggregates`   | Применение компрессии в предварительно рассчитанных агрегатах |            |
 
 ---
 
-### 🔺 Входящие связи (`X --> auto_rebalancer`)
+### 🔺 Входящие связи (`X --> compression_engine`)
 
-| Источник                               | Назначение                               |
-| -------------------------------------- | ---------------------------------------- |
-| `sharding_manager --> auto_rebalancer` | Передача команд на перераспределение     |
-| `platform_init --> auto_rebalancer`    | Инициализация логики балансировки        |
-| `config_loader --> auto_rebalancer`    | Загрузка политик балансировки            |
-| `metrics_exporter --> auto_rebalancer` | Обнаружение перегруженных компонентов    |
-| `schema_evolver --> auto_rebalancer`   | Реакция на изменения структуры таблиц    |
-| `crash_recovery --> auto_rebalancer`   | Восстановление и выравнивание после сбоя |
+| Источник                                    | Назначение                           |
+| ------------------------------------------- | ------------------------------------ |
+| `column_store --> compression_engine`       | Компрессия колонок                   |
+| `row_store --> compression_engine`          | Сжатие строк                         |
+| `etl_engine --> compression_engine`         | Компрессия при загрузке              |
+| `materialized_views --> compression_engine` | Сжатие при материализации            |
+| `ttl_eviction --> compression_engine`       | Уплотнение перед вытеснением         |
+| `buffer_pool --> compression_engine`        | Векторная компрессия при кэшировании |
 
 ---
 
@@ -40,6 +40,5 @@
 
 ---
 
-✅ Блок `1.8 Авто-ребалансировка` — критический для динамического масштабирования, обеспечения отказоустойчивости и равномерного распределения нагрузки.
-Обеспечивает самовосстановление после перегрузки или сбоя, участвует в балансировке ресурсов между компонентами in-memory СУБД.
-
+✅ `1.9 Компрессия данных` — обеспечивает компактное хранение без потери производительности, поддерживает все уровни (in-memory, SSD, WAL, MVCC).
+Полностью реализует требования по RLE, dictionary, delta, frame-of-reference и векторному сжатию.
